--- a/hidetask.html
+++ b/hidetask.html
@@ -17,7 +17,8 @@ if(x==0){
  }
  else{
 		$("#successmsg").css("display","inline");
-		$('#message').hide();
+		$("#message").hide();
+	 	$("#textval").val('');
 	}
 //alert(x);
  setTimeout(function() { 
