--- a/hidetask.html
+++ b/hidetask.html
@@ -18,6 +18,7 @@ if(x==0){
  else{
 		$("#successmsg").css("display","inline");
 		$('#message').hide();
+	 	$("#txtval").val('');
 	}
 //alert(x);
  setTimeout(function() { 
