--- a/hidetask.html
+++ b/hidetask.html
@@ -18,7 +18,7 @@ if(x==0){
  else{
 		$("#successmsg").css("display","inline");
 		$("#message").hide();
-	 	$("#textval").val('');
+	 	$("#txtval").val('');
 	}
 //alert(x);
  setTimeout(function() { 
