--- a/hidetask.html
+++ b/hidetask.html
@@ -8,6 +8,11 @@ Name:<input type="text" id="txtval" /><span id="message" style="display:none;col
 <button type="submit" onclick="message();">submit</button><br>
 <div id="successmsg" style="display:none;color:green">Congratulations!!!! Form has successfully submitted</div>
 <script>
+	$('#txtval').keypress(function(event){
+ if(event.keyCode == 13){
+ message();
+ }
+ });
 function message() {
 
  //$('#message').show();
